# btcopilot

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  Dockerfile  MANIFEST.in  MVP_DASHBOARD.md  Pipfile  README.md  SMOKE_TEST.md  alembic.ini  induction-reports  manage.py  pyproject.toml  pytest.ini  run_f1_eval.py  workstream_config.json
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 3b7558242b72_add_indexes_to_access_rights.py  6a711267d4ed_add_version_to_diagrams.py  7c9e805e2b21_add_name_etc_to_diagrams.py  a1b2c3d4e5f6_add_reconciliation_notes.py  a2b3c4d5e6f7_add_calibration_cache.py  a57ced0bc0eb_add_statement_reviews_to_discussion.py  b30fb43b8f92_add_therapist_tables.py  b3c4d5e6f7a8_add_prompt_used_to_feedbacks.py  c8d9e0f1a2b3_add_synthetic_personas.py  c8f1a2d3e4b5_add_reextraction_cursor_to_discussion.py  cbc6ba6febe0_add_diagrams_table.py  ceaf519dc8d2_add_indexes_to_access_rights.py  d2a5320cadc4_add_index_to_diagrams_user_id.py  d4e5f6a7b8c9_add_discussion_status.py  e1f2a3b4c5d6_add_indexes_to_access_rights.py  e5f6a7b8c9d0_add_access_rights_indexes.py  e5f6a7b8c9d0_add_index_to_sessions_user_id.py  f1a2b3c4d5e6_add_indexes_to_personal_models_fks.py  fc24860407c0_add_discussion_date.py  fea616e0fe7d_add_synthetic_to_discussions.py
btcopilot/: __init__.py  __main__.py  app.py  arrange.py  async_utils.py  auth.py  celery.py  commands.py  engine.py  extensions.py  familygraph.py  index.py  inference.py  json.py  llmutil.py  main.py  modelmixin.py  params.py  pdp.py  schema.py  v1.py
btcopilot/arrange/: __init__.py  layout.py  refine.py
btcopilot/experiments/: test_simplified_extraction.py
btcopilot/extensions/: __init__.py  chroma.py  graphql.py  handlers.py  llm.py
btcopilot/personal/: __init__.py  chat.py  clusters.py  coacheval.py  data_requirements.py  database.py  deepreextract.py  dock.py  fd326_eval.py  insights.py  intake.py  pdp.py  prompts.py  tasks.py  vignettes.py
btcopilot/pro/: __init__.py  routes.py  safe_pickle.py  tasks.py
btcopilot/tests/: conftest.py  pytest.ini  test_arrange_layout.py  test_arrange_refine.py  test_client.py  test_engine.py  test_familygraph.py  test_ingest.py  test_model.py
btcopilot/training/: __init__.py  __main__.py  analysis_utils.py  async_utils.py  auth.py  calibrationprompts.py  calibrationutils.py  connectivity_check.py  database.py  diagramlayout.py  eval_flash_lite.py  eval_harness.py  export_gt.py  export_tests.py  extraction.py  f1_metrics.py  inject_enhanced_extraction.py  irr_metrics.py  litreview.py  models.py  prompts.py  run_extract_full_f1.py  run_litreview_extract.py  run_prompts.py  run_prompts_live.py  sarfdefinitions.py  security.py  sse.py  tasks.py  test_prompts.py  test_prompts_live.py  test_single_extraction.py  utils.py  validate_t7_f1.py
decisions/: log.md
doc/: AUDIO_UPLOAD_FLOW.md  CHAT_FLOW.md  CLINICAL_EVALUATION_METHODOLOGY.md  DATA_MODEL_FLOW.md  DELTAS_2_FD_FILES.md  EXTRACTION_QUALITY.md  F1_DASHBOARD.md  F1_IMPROVEMENT_PLAN.md  F1_METRICS.md  FAMILY_DIAGRAM_ARRANGEMENT_SPEC.md  FAMILY_DIAGRAM_LAYOUT_ALGORITHM.md  FAMILY_DIAGRAM_VISUAL_SPEC.md  INIT_UNIFIED_DATA_MODEL.md  IRR_STUDY_VISION.md  IRR_TECHNICAL.md  Informed Consent Recording Sessions for Research TEMPLATE.docx  JOURNAL.md  MODEL_EVALUATIONS.md  OPEN_SOURCE_LICENSE_ANALYSIS.md  PLAN_TAB_ARCHITECTURE.md  PLAN_TAB_VISION.md  PROMPT_ENGINEERING_LOG.md  PROMPT_ENG_EXTRACTION_STRATEGY.md  PROMPT_INDUCTION_AUTOMATED.md  PROMPT_INDUCTION_CLI.md  PROMPT_OPTIMIZATION.md  PROMPT_OPTIMIZATION_MANUAL.md  SARF_EXTRACTION_REFERENCE.md  SARF_GROUND_TRUTH_TECHNICAL.md  SCHEMA_MIGRATION_PLAN.md  SYNTHETIC_CLIENT_PROMPT_SPEC.md  TDD_PROMPT_ENGINEERING.md  TODO_GEMINI_SCHEMA.md  TOOLS.md  audio-upload-flow.md  f1_timeseries.html  f1_timeseries.json  kerr_family_evaluation_model.json  triangles.md
doc/adrs/: README.md  calibration.md
doc/analyses/: 2026-02-20_auto_arrange.md  2026-02-20_bugs_and_todos_inventory.md  2026-02-20_diagram_viewing_and_sync.md  2026-02-20_pdp_extraction_and_delta_acceptance.md  2026-02-20_personal_app_beta_readiness.md  2026-02-20_server_api_and_data_model.md  2026-02-20_synthetic_pipeline.md  2026-03-03_baseline_f1_induction.md  2026-03-03_gemini-flash-lite-extract-full-eval.md  T7-9_idempotent_reextraction.md  extraction-f1-report-2026-03-04.md  gemini-flash-lite-baseline-20260303.md
doc/archive/: 2026-03-CLINICAL_EVALUATION_METHODOLOGY.md  2026-03-DELTAS_2_FD_FILES.md  2026-03-IRR_STUDY_VISION.md  2026-03-IRR_TECHNICAL.md  2026-03-OPEN_SOURCE_LICENSE_ANALYSIS.md  2026-03-PLAN_TAB_ARCHITECTURE.md  2026-03-PLAN_TAB_VISION.md  2026-03-PROMPT_INDUCTION_AUTOMATED.md  2026-03-PROMPT_INDUCTION_CLI.md  2026-03-PROMPT_OPTIMIZATION_MANUAL.md  2026-03-SARF_EXTRACTION_REFERENCE.md  2026-03-TODO_GEMINI_SCHEMA.md  2026-03-triangles.md
doc/basic-series/: 05_BOWEN_BASIC_SERIES_1.md  06_BOWEN_BASIC_SERIES_2.md  07_BOWEN_BASIC_SERIES_3.md  08_BOWEN_BASIC_SERIES_4.md  09_BOWEN_BASIC_SERIES_5.md  README.md  (+9 more)
docker/: Dockerfile  Dockerfile.scratch  docker-compose.yml
mcp-server/: mcp_server.py
model_tests/: conftest.py  test_extraction.py
plans/: opus-conversational-prompts.md
poc/: inference_chroma.py  ingest_chroma.py
scripts/: sync-prod-db.sh
tests/: conftest.py  conftest_pytest_options.py  test_base_models.py
tools/: Mistral-PDF-to-Markdown.ipynb
(+495 files in other folders)
